<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="back">←</string>
    <string name="clear">С</string>
    <string name="sign">+/-</string>
    <string name="division">/</string>

    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="multiplication">*</string>

    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="minus">-</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="plus">+</string>

    <string name="btn0">0</string>
    <string name="point">.</string>
    <string name="eq">=</string>

</resources>
